# agent-orchestration

./: .gitignore  Makefile
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-runtime-foundation/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-04-PLAN.md  01-05-PLAN.md  01-06-PLAN.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md
.planning/quick/1-build-serp-scraping-agent-with-proxy-rot/: 1-PLAN.md  1-SUMMARY.md
.planning/quick/2-build-image-builder-service-schemas-exte/: 2-PLAN.md  2-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
agent-controller/: .gitignore  Dockerfile  Makefile  go.mod
agent-controller/api/v1alpha1/: agent_types.go  agentdirectory_types.go  agentpolicy_types.go  clusterpolicy_types.go  crds_types_test.go  groupversion_info.go  zz_generated.deepcopy.go
agent-controller/cmd/: main.go
agent-controller/config/manager/: manager.yaml
agent-controller/config/rbac/: role.yaml  rolebinding.yaml  serviceaccount.yaml
agent-controller/config/samples/: agent_v1alpha1_sample.yaml
agent-controller/hack/: boilerplate.go.txt
agent-controller/internal/controller/: agent_controller.go  agent_controller_test.go
agent-inventory-api/: .env.example  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
agent-inventory-api/alembic/: env.py
agent-inventory-api/alembic/versions/: 0001_create_agents_table.py  0002_add_version_deployment_state.py  0003_add_spec_to_agents.py  0004_add_agent_outbox.py  0005_add_outbox_processing_since.py
agent-inventory-api/app/: main.py
agent-inventory-api/app/core/: config.py
agent-inventory-api/app/db/: session.py
agent-inventory-api/app/k8s/: client.py
agent-inventory-api/app/models/: agent.py
agent-inventory-api/app/outbox/: events.py  processor.py
agent-inventory-api/config/api/: api.yaml  configmap.yaml  rbac.yaml
agent-inventory-api/config/postgres/: postgres.yaml  secret.yaml
agent-inventory-api/tests/: conftest.py  test_agents.py  test_db.py  test_health.py
agent-registry-ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
agent-registry-ui/config/: ui.yaml
agent-registry-ui/src/: App.tsx
agent-registry-ui/src/api/: agents.ts
agent-registry-ui/src/components/: AgentCard.tsx  ExecuteModal.tsx  Nav.tsx  StatusBadge.tsx
agent-registry-ui/src/pages/: DeployPage.tsx  InventoryPage.tsx
agent-registry-ui/src/types/: agent.ts
core-tools-lib/: pyproject.toml
core-tools-lib/src/core_tools/: __init__.py  agent.py  health.py  task_store.py
core-tools-lib/tests/: test_agent.py  test_task_store.py
docs/: architecture-diagrams.md  federated-agent-stack.md  platform-layer-boundaries.md
example-agent/: .gitignore  Dockerfile  Makefile  pyproject.toml
example-agent/app/: main.py
example-agent/app/tools/: echo.py
example-agent/config/: agent.yaml
examples/: echo-agent.md
examples/echo-agent/: Dockerfile  pyproject.toml
examples/echo-agent/app/: executor.py  main.py
image-builder/: Dockerfile  Makefile  pyproject.toml
image-builder/alembic/: env.py
image-builder/alembic/versions/: 0001_create_build_jobs_table.py
image-builder/app/: main.py
image-builder/app/builders/: abc.py  kaniko.py
image-builder/app/core/: config.py
image-builder/app/db/: session.py
image-builder/app/models/: build.py
image-builder/config/: api.yaml  rbac.yaml  registry.yaml
image-builder/tests/: test_models.py
serp-agent/: Dockerfile  Makefile  pyproject.toml
serp-agent/app/: agent_card.py  executor.py  main.py  routes.py
serp-agent/app/ui/: index.html
serp-agent/config/: agent.yaml  configmap.yaml  cronjob.yaml  rbac.yaml  secret.yaml
serp-agent/src/serp_agent/: __init__.py  __main__.py  agent.py  browser.py  config.py  fingerprint.py  proxy.py
serp-agent/tests/: test_agent.py  test_app.py
(+18 files in other folders)
