[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core_tools"]

[project]
name = "core-tools"
version = "0.1.0"
description = "Shared library for the agent framework: A2A protocol + MCP server utilities"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[http-server]>=0.3.26",
    "fastapi>=0.115.0",
    "pydantic>=2.9.0",
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
