[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/serp_agent"]

[project]
name = "serp-agent"
version = "0.1.0"
description = "SERP scraping agent with proxy rotation, UA randomization, and human-like delays"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.44",
    "pydantic>=2.9",
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff",
    "mypy",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
